# He-Engine-Kernel

./: .gitmodules  CMakeLists.txt  README.md
cmake/: QfusionUtils.cmake  utils.cmake
include/he/: config.h
include/he/core/: alloc.h  arch.h  block_alloc.h  filesystem.h  hash.h  log.h  scratch_alloc.h  str.h  str_utf.h  thread.h  types.h  unix_thread.h
include/he/core/math/: math.h
include/he/renderer/: conversion.h  deferred_free_pool.h  format.h  gpu_preset.h  pogo_buffer.h  renderer.h  resource_upload.h  scratch_alloc.h  segment_alloc.h  swapchain.h  vk.h
src/he/: CMakeLists.txt
src/he/core/: CMakeLists.txt  alloc.c  block_alloc.c  filesystem.c  log.c  scratch_alloc.c  str.c  str_utf.c  thread.c
src/he/core/test/: alloc_test.c  qstr_utf_test.c  scratch_alloc_test.c  str_test.c  str_utf_test.c
src/he/renderer/: format.c  pogo_buffer.c  renderer.c  resource_upload.c  scratch_alloc.c  segment_alloc.c  swapchain.c
